--- a/PPKE_ITK_kviz/mainwindow.ui
+++ b/PPKE_ITK_kviz/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>615</width>
-    <height>550</height>
+    <height>635</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -60,7 +60,7 @@
             <item>
              <layout class="QVBoxLayout" name="verticalLayout">
               <item>
-               <widget class="QLabel" name="label">
+               <widget class="QLabel" name="gameLabel">
                 <property name="font">
                  <font>
                   <family>MS Shell Dlg 2</family>
@@ -70,7 +70,7 @@
                  </font>
                 </property>
                 <property name="text">
-                 <string>KVIZ</string>
+                 <string>KVÍZ</string>
                 </property>
                </widget>
               </item>
@@ -93,7 +93,7 @@
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout">
                 <item>
-                 <widget class="QLabel" name="label_2">
+                 <widget class="QLabel" name="selectedQuizLabel">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                     <horstretch>0</horstretch>
@@ -128,7 +128,7 @@
                  </spacer>
                 </item>
                 <item>
-                 <widget class="QLabel" name="label_4">
+                 <widget class="QLabel" name="selectedQuiz">
                   <property name="font">
                    <font>
                     <family>MS Shell Dlg 2</family>
@@ -147,7 +147,7 @@
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_2">
                 <item>
-                 <widget class="QLabel" name="label_3">
+                 <widget class="QLabel" name="playerNameLabel">
                   <property name="font">
                    <font>
                     <family>MS Shell Dlg 2</family>
@@ -176,26 +176,17 @@
                  </spacer>
                 </item>
                 <item>
-                 <widget class="QPlainTextEdit" name="plainTextEdit">
-                  <property name="maximumSize">
+                 <widget class="QLineEdit" name="playerName">
+                  <property name="minimumSize">
                    <size>
-                    <width>16777215</width>
+                    <width>300</width>
                     <height>30</height>
                    </size>
                   </property>
                   <property name="font">
                    <font>
-                    <family>MS Shell Dlg 2</family>
                     <pointsize>16</pointsize>
-                    <weight>75</weight>
-                    <bold>true</bold>
                    </font>
-                  </property>
-                  <property name="verticalScrollBarPolicy">
-                   <enum>Qt::ScrollBarAlwaysOff</enum>
-                  </property>
-                  <property name="horizontalScrollBarPolicy">
-                   <enum>Qt::ScrollBarAlwaysOff</enum>
                   </property>
                  </widget>
                 </item>
@@ -246,7 +237,7 @@
                  </spacer>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="pushButton">
+                 <widget class="QPushButton" name="startGame">
                   <property name="minimumSize">
                    <size>
                     <width>200</width>
@@ -351,24 +342,17 @@
              </spacer>
             </item>
             <item>
-             <widget class="QPlainTextEdit" name="questionTitle_2">
-              <property name="maximumSize">
+             <widget class="QLineEdit" name="questionEditorTitle">
+              <property name="minimumSize">
                <size>
-                <width>16777215</width>
+                <width>0</width>
                 <height>30</height>
                </size>
               </property>
               <property name="font">
                <font>
-                <family>MS Shell Dlg 2</family>
                 <pointsize>16</pointsize>
                </font>
-              </property>
-              <property name="verticalScrollBarPolicy">
-               <enum>Qt::ScrollBarAlwaysOff</enum>
-              </property>
-              <property name="horizontalScrollBarPolicy">
-               <enum>Qt::ScrollBarAlwaysOff</enum>
               </property>
              </widget>
             </item>
@@ -790,7 +774,7 @@
               <item>
                <layout class="QVBoxLayout" name="verticalLayout_9">
                 <item>
-                 <widget class="QRadioButton" name="answerA">
+                 <widget class="QRadioButton" name="A">
                   <property name="font">
                    <font>
                     <family>MS Shell Dlg 2</family>
@@ -803,7 +787,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QRadioButton" name="answerB">
+                 <widget class="QRadioButton" name="B">
                   <property name="font">
                    <font>
                     <family>MS Shell Dlg 2</family>
@@ -816,7 +800,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QRadioButton" name="answerC">
+                 <widget class="QRadioButton" name="C">
                   <property name="font">
                    <font>
                     <family>MS Shell Dlg 2</family>
@@ -829,7 +813,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QRadioButton" name="answerD">
+                 <widget class="QRadioButton" name="D">
                   <property name="font">
                    <font>
                     <family>MS Shell Dlg 2</family>
@@ -973,21 +957,21 @@
     <addaction name="actionBe_p_tett_k_rd_ssor_kiv_laszt_sa"/>
     <addaction name="actionK_rd_ssor_tall_z_sa_f_jlb_l"/>
     <addaction name="separator"/>
-    <addaction name="actionKil_p_s"/>
+    <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuJ_t_k">
     <property name="title">
      <string>Játék</string>
     </property>
-    <addaction name="action_j_j_t_k_ind_t_sa"/>
-    <addaction name="actionKil_p_s_a_jelenlegi_j_t_kb_l"/>
+    <addaction name="actionStartNewGame"/>
+    <addaction name="actionQuitCurrentGame"/>
    </widget>
    <widget class="QMenu" name="menuSzerkeszt">
     <property name="title">
      <string>Szerkesztő</string>
     </property>
-    <addaction name="actionMegl_v_k_rd_ssor_szerkeszt_se"/>
-    <addaction name="action_j_k_rd_ssor_l_trehoz_sa"/>
+    <addaction name="actionEditExistingQuiz"/>
+    <addaction name="actionCreateNewQuiz"/>
    </widget>
    <widget class="QMenu" name="menuInf">
     <property name="title">
@@ -1002,11 +986,6 @@
    <addaction name="menuSzerkeszt"/>
    <addaction name="menuInf"/>
   </widget>
-  <action name="actionsdfdf">
-   <property name="text">
-    <string>sdfdf</string>
-   </property>
-  </action>
   <action name="actionBe_p_tett_k_rd_ssor_kiv_laszt_sa">
    <property name="text">
     <string>Beépített kérdéssor kiválasztása</string>
@@ -1017,27 +996,27 @@
     <string>Kérdéssor tallózása fájlból</string>
    </property>
   </action>
-  <action name="actionKil_p_s">
+  <action name="actionExit">
    <property name="text">
     <string>Kilépés</string>
    </property>
   </action>
-  <action name="action_j_j_t_k_ind_t_sa">
+  <action name="actionStartNewGame">
    <property name="text">
     <string>Új játék indítása</string>
    </property>
   </action>
-  <action name="actionKil_p_s_a_jelenlegi_j_t_kb_l">
+  <action name="actionQuitCurrentGame">
    <property name="text">
     <string>Kilépés a jelenlegi játékból</string>
    </property>
   </action>
-  <action name="actionMegl_v_k_rd_ssor_szerkeszt_se">
+  <action name="actionEditExistingQuiz">
    <property name="text">
     <string>Meglévő kérdéssor szerkesztése</string>
    </property>
   </action>
-  <action name="action_j_k_rd_ssor_l_trehoz_sa">
+  <action name="actionCreateNewQuiz">
    <property name="text">
     <string>Új kérdéssor létrehozása</string>
    </property>
