--- a/PPKE_ITK_kviz/questioneditor.ui
+++ b/PPKE_ITK_kviz/questioneditor.ui
@@ -199,7 +199,7 @@
            </widget>
           </item>
           <item row="3" column="1">
-           <widget class="QTextEdit" name="answerCInput_2">
+           <widget class="QTextEdit" name="answerDInput">
             <property name="maximumSize">
              <size>
               <width>16777215</width>
