--- a/PPKE_ITK_kviz/mainwindow.ui
+++ b/PPKE_ITK_kviz/mainwindow.ui
@@ -699,7 +699,7 @@
                    </font>
                   </property>
                   <property name="text">
-                   <string>55</string>
+                   <string/>
                   </property>
                  </widget>
                 </item>
